--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="pranshu.patel232002@gmail.com">pranshu.patel232002@gmail.com</a></p>
+          <p><a href="mailto:pranshu.patel232002@gmail.com">pranshu.patel232002@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
