--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@
         </div>
       </div>
       <img
-        src="..assets/arrow.png"
+        src="../assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="location.href='./#contact'"
       />
     </section>
     <section id="projects">
